tests/paczka1/fuzzy1/83033036.err
Error in line 11: LSy8hOGP A58 17,0
Error in line 2: vws6 A506 0,4
Error in line 23: A520 A58 82,7
Error in line 36: A520 A520 62,8
Error in line 39: uIFZIiZm A933 155Y2
